WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280936
Fix smart pointer warnings in RemoteSourceBufferProxy::createInitializationSegmentInfo
https://bugs.webkit.org/show_bug.cgi?id=280936
Summary
Fix smart pointer warnings in RemoteSourceBufferProxy::createInitializationSe...
Ryosuke Niwa
Reported
2024-10-05 01:25:46 PDT
Fix them one way or another.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-10-05 01:30:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34742
EWS
Comment 2
2024-10-07 01:03:58 PDT
Committed
284753@main
(7d3dcb5289b0): <
https://commits.webkit.org/284753@main
> Reviewed commits have been landed. Closing PR #34742 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-07 01:04:16 PDT
<
rdar://problem/137410680
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug