Fix smart pointer warnings in RemoteSourceBufferProxy::createInitializationSegmentInfo https://bugs.webkit.org/show_bug.cgi?id=280936

Reviewed by Chris Dumez.

The warnings were emitted because static analyzer can't resolve the type of the "auto" lambda arguments.
Explicitly specify the argument type to fix this.

Also protect the media description as it was warned by the static analyzer once the type was specified.

* Source/WebCore/platform/graphics/SourceBufferPrivateClient.h:
(WebCore::SourceBufferPrivateClient::InitializationSegment::AudioTrackInformation::protectedDescription const):
(WebCore::SourceBufferPrivateClient::InitializationSegment::VideoTrackInformation::protectedDescription const):
(WebCore::SourceBufferPrivateClient::InitializationSegment::TextTrackInformation::protectedDescription const):
* Source/WebKit/GPUProcess/media/RemoteSourceBufferProxy.cpp:
(WebKit::RemoteSourceBufferProxy::createInitializationSegmentInfo):
* Source/WebKit/SaferCPPExpectations/UncountedCallArgsCheckerExpectations:

Canonical link: https://commits.webkit.org/284753@main