Source/WebKit/GPUProcess/media/RemoteSourceBufferProxy.cpp
@@ -383,24 +383,24 @@ std::optional<InitializationSegmentInfo> RemoteSourceBufferProxy::createInitiali
     InitializationSegmentInfo segmentInfo;
     segmentInfo.duration = segment.duration;
 
-    segmentInfo.audioTracks = segment.audioTracks.map([&](auto& audioTrackInfo) {
+    segmentInfo.audioTracks = segment.audioTracks.map([&](const InitializationSegment::AudioTrackInformation& audioTrackInfo) {
         auto id = audioTrackInfo.track->id();
         remoteMediaPlayerProxy->addRemoteAudioTrackProxy(*audioTrackInfo.protectedTrack());
-        m_mediaDescriptions.try_emplace(id, *audioTrackInfo.description);
+        m_mediaDescriptions.try_emplace(id, *audioTrackInfo.protectedDescription());
         return InitializationSegmentInfo::TrackInformation { MediaDescriptionInfo(*audioTrackInfo.description), id };
     });
 
-    segmentInfo.videoTracks = segment.videoTracks.map([&](auto& videoTrackInfo) {
+    segmentInfo.videoTracks = segment.videoTracks.map([&](const InitializationSegment::VideoTrackInformation& videoTrackInfo) {
         auto id = videoTrackInfo.track->id();
         remoteMediaPlayerProxy->addRemoteVideoTrackProxy(*videoTrackInfo.protectedTrack());
-        m_mediaDescriptions.try_emplace(id, *videoTrackInfo.description);
+        m_mediaDescriptions.try_emplace(id, *videoTrackInfo.protectedDescription());
         return InitializationSegmentInfo::TrackInformation { MediaDescriptionInfo(*videoTrackInfo.description), id };
     });
 
-    segmentInfo.textTracks = segment.textTracks.map([&](auto& textTrackInfo) {
+    segmentInfo.textTracks = segment.textTracks.map([&](const InitializationSegment::TextTrackInformation& textTrackInfo) {
         auto id = textTrackInfo.track->id();
         remoteMediaPlayerProxy->addRemoteTextTrackProxy(*textTrackInfo.protectedTrack());
-        m_mediaDescriptions.try_emplace(id, *textTrackInfo.description);
+        m_mediaDescriptions.try_emplace(id, *textTrackInfo.protectedDescription());
         return InitializationSegmentInfo::TrackInformation { MediaDescriptionInfo(*textTrackInfo.description), id };
     });
 
